--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "pdf-converter-mvp",
+  "name": "pdf-converter",
   "version": "1.0.0",
-  "description": "Simple PDF converter: image -> PDF (Express + pdf-lib)",
+  "description": "A simple PDF converter web app",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
-  },
-  "engines": {
-    "node": ">=18"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "^1.4.5",
-    "mime-types": "^2.1.35",
-    "pdf-lib": "^1.17.1"
-  }
+    "multer": "^1.4.5-lts.1",
+    "ejs": "^3.1.9",
+    "body-parser": "^1.20.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=18.x"
+  },
+  "keywords": [],
+  "author": "Your Name",
+  "license": "ISC"
 }
